force-app/main/default/objects/OrderLineItem__c/OrderLineItem__c.object-meta.xml
<CustomObject>
    <description>Junction object that allows to give each product a different discount to a given Order</description>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>OLI-{00000000}</displayFormat>
        <label>Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>