force-app/main/default/objects/OrderLineItem__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>What is the discount you want to apply?</description>
    <inlineHelpText>What is the discount you want to apply?</inlineHelpText>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>