force-app/main/default/objects/OrderLineItem__c/fields/EffectiveUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>EffectiveUnitPrice__c</fullName>
    <description>Online Product price after discount is applied.</description>
    <formula>(1- Discount__c ) * UnitListPrice__c</formula>
    <inlineHelpText>Online Product price after discount is applied.</inlineHelpText>
    <label>Effective Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>