force-app/main/default/objects/OrderLineItem__c/fields/OnlineOrder__c.field-meta.xml
<CustomField>
    <fullName>OnlineOrder__c</fullName>
    <description>What Online Order does the current discount apply to?</description>
    <inlineHelpText>What Online Order does the current discount apply to?</inlineHelpText>
    <label>Online Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>OrderLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>