force-app/main/default/objects/OrderLineItem__c/fields/OnlineProduct__c.field-meta.xml
<CustomField>
    <fullName>OnlineProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What Online Products does the current discount apply to?</description>
    <inlineHelpText>What Online Products does the current discount apply to?</inlineHelpText>
    <label>Online Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>