force-app/main/default/objects/OrderLineItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>How many product is in the Online Order?</description>
    <inlineHelpText>How many product is in the Online Order?</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>