force-app/main/default/objects/OrderLineItem__c/fields/TotalGrossPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalGrossPrice__c</fullName>
    <description>What is Total Gross Price of product in this order?</description>
    <formula>(1+ VALUE(text(VATRate__c)))*(TotalNetPrice__c)</formula>
    <inlineHelpText>What is Total Gross Price of product in this order?</inlineHelpText>
    <label>Total Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>