force-app/main/default/objects/OrderLineItem__c/fields/TotalNetPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalNetPrice__c</fullName>
    <description>Total total price of that number of product after discount applied</description>
    <formula>EffectiveUnitPrice__c *  Quantity__c</formula>
    <inlineHelpText>Total total price of that number of product after discount applied</inlineHelpText>
    <label>Total Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>