force-app/main/default/objects/OrderLineItem__c/fields/UnitListPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitListPrice__c</fullName>
    <description>The price of the Online Product before the discount</description>
    <formula>OnlineProduct__r.Price__c</formula>
    <inlineHelpText>The price of the Online Product before the discount</inlineHelpText>
    <label>Unit List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>